// Proto file for movie info service. Note this is gRPC proto syntax (not Go)
syntax = "proto3";

option go_package = "github.com/KendallBritton/CloudNativeApp/labs/Lab5/movieapi";

package movieapi;

service MovieInfo {
	// Sends a requeest for movie info
	rpc GetMovieInfo (MovieRequest) returns (MovieReply) {}
	rpc SetMovieInfo (MovieData) returns (Status){}
}

// Add comment
message Status {
	string code = 1;
}

// Add comment
message MovieData {
	string title = 1;
	int32 year = 2;
	string director = 3;
	repeated string cast = 4;
}

// The request message containing movie name
message MovieRequest {
	string title = 1;
}

// The response message containining movie info
message MovieReply {
	int32 year = 1;
	string director = 2;
	repeated string cast = 3;
	
}

